tests/golden/snapshots/render_instruction__instruction_with_emit.snap
---
source: tests/golden/render_instruction.rs
expression: out
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=instruction ===
use anchor_lang::prelude::*;
use crate::events::Pinged;

#[derive(Accounts)]
#[instruction(nonce: u64)]
pub struct Ping<'info> {
    pub user: Signer<'info>,
}
// === sunscreen:auto-generated:end segment=file ===

// === sunscreen:user-region:begin segment=handler ===
pub fn handler(
    ctx: Context<Ping>,
    nonce: u64,
) -> Result<()> {
    let _ = ctx;
    let _ = &nonce;
    emit!(Pinged {
        nonce: todo!("set Pinged.nonce"),
    });
    Ok(())
}
// === sunscreen:user-region:end segment=handler ===
