tests/golden/snapshots/render_instruction__instruction_with_pda_seeds.snap
---
source: tests/golden/render_instruction.rs
expression: out
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=instruction ===
use anchor_lang::prelude::*;

#[derive(Accounts)]
#[instruction(amount: u64, label: String)]
pub struct CreateVault<'info> {
    #[account(mut, seeds = [b"vault", payer.key().as_ref()], bump)]
    pub vault: AccountInfo<'info>,
    #[account(mut)]
    pub payer: Signer<'info>,
    pub system_program: Program<'info, System>,
}
// === sunscreen:auto-generated:end segment=file ===

// === sunscreen:user-region:begin segment=handler ===
pub fn handler(
    ctx: Context<CreateVault>,
    amount: u64,
    label: String,
) -> Result<()> {
    let _ = ctx;
    let _ = &amount;
    let _ = &label;
    Ok(())
}
// === sunscreen:user-region:end segment=handler ===
